@@ -113,7 +113,9 @@ module Fairy
 
     def_prop :XMARSHAL_QUEUE_CHUNK_SIZE
     def_prop :XMARSHAL_QUEUE_MIN_CHUNK_NO
+    def_prop :XMARSHAL_QUEUE_BUFFERS_CACHE_LIMIT
     def_prop :XMARSHAL_QUEUE_USE_STRING_BUFFER
+
     def_prop :XMARSHAL_QUEUE_LOG_MSTORE
 
     def_prop :SORTEDQUEUE_POOL_THRESHOLD
@@ -307,6 +309,7 @@ module Fairy
 
   DEFAULT_CONF.XMARSHAL_QUEUE_CHUNK_SIZE = DEFAULT_CONF.MARSHAL_QUEUE_CHUNK_SIZE 
   DEFAULT_CONF.XMARSHAL_QUEUE_MIN_CHUNK_NO = DEFAULT_CONF.MARSHAL_QUEUE_MIN_CHUNK_NO 
+  DEFAULT_CONF.XMARSHAL_QUEUE_BUFFERS_CACHE_LIMIT = 100
   DEFAULT_CONF.XMARSHAL_QUEUE_USE_STRING_BUFFER = true
   DEFAULT_CONF.XMARSHAL_QUEUE_LOG_MSTORE = false
   
